# backend-quickjs

./: .gitignore  CMakeLists.txt  LICENSE  make_android.sh  make_ios.sh  make_linux64.sh  make_ns.bat  make_ohos.sh  make_osx.sh  make_osx_arm64.sh  make_osx_dylib.sh  make_ps.bat  make_wasm.sh  make_wasm_bc.sh  make_win.sh  puer-build.json
.github/workflows/: build_quickjs.yml  build_quickjs_qjs_ns.yml
include/: quickjs-msvc.h  v8-platform.h  v8.h  v8config.h
include/libplatform/: libplatform.h
quickjs/: _VERSION  cutils.c  cutils.h  libbf.c  libregexp.c  libunicode.c  libunicode.h  quickjs-atom.h  quickjs-opcode.h  quickjs.c  quickjs.h
src/: v8-impl.cc
win/: CMakeLists.txt  make_win32.bat  make_win64.bat  make_win64md.bat  make_win64md_dll.bat
